nodered/service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: nodered
  labels:
    app: nodered
  name: nodered
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 1880
  selector:
    app: nodered
---
apiVersion: v1
kind: Service
metadata:
  namespace: nodered
  labels:
    app: nodered
  name: alexa-nodered
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: nodered
